# tech-challenge-four

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
.github/: README.md
assets/: payload.json  payload.py  training.py
assets/models/: lstm_model_final.keras
models/: lstm_model.keras
src/: container.py  main.py  training.py
src/api/: routes.py
src/api/schemas/: predict.py
src/api/utils/: dependency.py
src/config/: app_config.py  data_config.py  model_config.py
src/data/: aapl.db  aapl_stock_data.csv  example_payload.json  lstm_model_final.keras  preparation.py
src/data/db/: client.py
src/data/transformation/: ingestion.py
src/dependency/: container.py
src/monitoring/: metrics.py
src/services/: data_loader.py  factory.py  model.py  technical_indicators.py
src/services/data/: fetcher.py  preprocessor.py  repository.py
src/services/indicators/: technical_indicators.py
src/services/interfaces/: data_service.py  indicator_service.py  model_service.py
src/services/ml/: evaluator.py  model_builder.py  predictor.py  trainer.py
src/utils/: service_factory.py
